[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatekeeper_dev"
version = "0.1.0"
description = "CLI toolkit for adding Gatekeeper AI-powered workflows to GitHub repos and fetching Copilot session data."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Gatekeeper Dev Team"},
]
keywords = ["gatekeeper", "copilot", "github", "workflows", "ai", "code-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
copilot = [
    "copilot",
]

[project.scripts]
gatekeeper_dev = "gatekeeper_dev.cli:main"

[project.urls]
Homepage = "https://github.com/gatekeeper-dev/gatekeeper_dev"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"gatekeeper_dev.workflows" = ["*.yml", "*.yaml"]
"gatekeeper_dev.scripts" = ["*.py"]
